Add buildSrc and convert settings.gradle to setting.gradle.kts