@@ -1,37 +1,61 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+apply from: "$rootDir/common-android.gradle"
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "30.0.0"
+    compileSdkVersion Versions.compileSDK
 
     defaultConfig {
-        applicationId "com.employeesdatabase"
-        minSdkVersion 23
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        applicationId ApplicationID.id
+        testInstrumentationRunner TestLibraries.customInstrumentationRunner
     }
-
     buildTypes {
-        release {
+        debug {
+            debuggable true
             minifyEnabled false
+        }
+
+        release {
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+    }
+    testOptions {
+        animationsDisabled = true
+
+        reportDir "$rootDir/reports/${project.getName()}"
+        resultsDir "$rootDir/reports/results/${project.getName()}"
+        unitTests.returnDefaultValues = true
+        unitTests.all {
+
+            reports {
+                junitXml.destination = file("$rootDir/reports/${project.getName()}")
+            }
+
+            jvmArgs '-XX:MaxPermSize=512m'
+            ignoreFailures true
         }
     }
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.0'
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation Libraries.navigationFragmentKtx
+    implementation Libraries.navigationKtx
 
+    implementation Libraries.coreKtx
+
+    implementation Libraries.timber
+
+    implementation Libraries.koinAndroidX
+    implementation Libraries.koinViewModelAndroidX
+
+    implementation Libraries.mvrx
+    implementation Libraries.retrofit
+
+    implementation Libraries.appCompat
+    implementation Libraries.constraint
+
+    implementation Libraries.sqldelightAndroidDriver
 }
